--- a/src/index.css
+++ b/src/index.css
@@ -112,6 +112,7 @@ html {
 
 .custom-scrollbar::-webkit-scrollbar {
   height: 0px; /* Adjust scrollbar height */
+  width: 5px;
 }
 
 .custom-scrollbar::-webkit-scrollbar-thumb {
@@ -122,3 +123,141 @@ html {
 .custom-scrollbar::-webkit-scrollbar-track {
   background-color: #f3f4f6; /* Tailwind gray-100 */
 }
+
+@keyframes pulse {
+  0% {
+    transform: scale(1);
+  }
+  50% {
+    transform: scale(1.05);
+  }
+  100% {
+    transform: scale(1);
+  }
+}
+
+.pulse {
+  animation: pulse 1s infinite;
+}
+
+.add-btn-hover-pulse:hover {
+  animation: pulse 1s infinite;
+}
+
+
+/* Payment Loader */
+.payment-loader {
+  display: block;
+  --height-of-loader: 4px;
+  --loader-color: #0071e2;
+  width: 10rem;
+  height: var(--height-of-loader);
+  border-radius: 30px;
+  background-color: rgba(0, 0, 0, 0.2);
+  position: relative;
+}
+
+.payment-loader::before {
+  content: "";
+  position: absolute;
+  background: var(--loader-color);
+  top: 0;
+  left: 0;
+  width: 0%;
+  height: 100%;
+  border-radius: 30px;
+  animation: moving 1s ease-in-out infinite;
+}
+
+@keyframes moving {
+  50% {
+    width: 100%;
+  }
+
+  100% {
+    width: 0;
+    right: 0;
+    left: unset;
+  }
+}
+
+/* back to home button*/
+.btn-backhome {
+  --clr-font-main: hsla(0 0% 20% / 100);
+  --btn-bg-1: hsla(123, 80%, 45%, 1);
+  --btn-bg-2: hsla(145, 63%, 42%, 1);
+  --btn-bg-color: hsla(360, 100%, 100%, 1);
+  --radii: 2em;
+  cursor: pointer;
+  min-width: 120px;
+  min-height: 44px;
+  font-size: var(--size, 1rem);
+  font-weight: 500;
+  transition: 0.5s ease-in-out;
+  background-size: 280% auto;
+  background-image: linear-gradient(
+    325deg,
+    var(--btn-bg-2) 0%,
+    var(--btn-bg-1) 55%,
+    var(--btn-bg-2) 90%
+  );
+  border: none;
+  border-radius: var(--radii);
+  color: var(--btn-bg-color);
+  box-shadow: 0px 0px 20px rgba(128, 255, 128, 0.5),
+    0px 5px 5px -1px rgba(34, 139, 34, 0.25),
+    inset 4px 4px 8px rgba(173, 255, 47, 0.5),
+    inset -4px -4px 8px rgba(0, 128, 0, 0.35);
+}
+
+.btn-backhome:hover {
+  background-position: left bottom;
+  background-image: linear-gradient(
+    325deg,
+    hsla(110, 90%, 40%, 1) 0%,
+    hsla(140, 70%, 50%, 1) 55%,
+    hsla(110, 90%, 40%, 1) 90%
+  );
+  box-shadow: 0px 0px 25px rgba(102, 255, 102, 0.8),
+    0px 8px 12px -1px rgba(34, 139, 34, 0.4),
+    inset 6px 6px 12px rgba(144, 238, 144, 0.7),
+    inset -6px -6px 12px rgba(0, 100, 0, 0.5);
+}
+
+@media (prefers-reduced-motion: reduce) {
+  .btn-backhome {
+    transition: linear;
+  }
+}
+
+
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+.fade-in {
+  animation: fadeIn 0.5s ease-in forwards;
+}
+
+
+@keyframes zoomIn {
+  from {
+    transform: scale(0);
+    opacity: 0;
+  }
+  to {
+    transform: scale(1);
+    opacity: 1;
+  }
+}
+
+.zoom-in {
+  animation: zoomIn 0.5s ease-in;
+}
+
+
